--- a/.github/workflows/windows-demo-workflow.yml
+++ b/.github/workflows/windows-demo-workflow.yml
@@ -5,8 +5,11 @@ on: [ push, pull_request ]
 jobs:
 
   build:
-    runs-on: windows-2019
-    steps:    
+    runs-on: windows-latest
+    steps:
+    - name: git configure long path
+      run: git config --global core.longpaths true
+
     - uses: actions/checkout@v2
 
     - uses: actions/setup-java@v2
